Apply corrections to solution removed container explicit rows, they were setting article too tall, and applied height to cards

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -7,7 +7,7 @@
   text-align: center;
   display: grid;;
   grid-template-columns: 1fr 4fr;;
-  grid-template-rows: 2fr 1fr 16fr 1fr;
+  /* grid-template-rows: 2fr 1fr 16fr 1fr; */
   gap: 4px;;
 }
 
@@ -122,6 +122,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
